[gd_scene load_steps=2 format=3 uid="uid://xbxcrlhh2020"]

[ext_resource type="Script" path="res://addons/humanizer/scripts/inspector/shapekey_section_inspector.gd" id="1_q6ca1"]

[node name="ShapeKeySectionContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6ca1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RandomizationControls" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="RandomizeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Randomize"

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls/GridContainer"]
layout_mode = 2
text = "Randomization"
horizontal_alignment = 2

[node name="RandomizationSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls/GridContainer"]
layout_mode = 2
text = "Asymmetry"
horizontal_alignment = 2

[node name="AsymmetrySlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/RandomizationControls/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2
